--- a/LabelTool/LabelTool/UC/SegmentationLabelViewer.xaml
+++ b/LabelTool/LabelTool/UC/SegmentationLabelViewer.xaml
@@ -14,6 +14,7 @@
         <skia:SKGLElement>
             <i:Interaction.Behaviors>
                 <behaviors:SKElementBehavior CanvasViewModel="{Binding ElementName=view, Path=CanvasViewModel}"></behaviors:SKElementBehavior>
+                <behaviors:MouseEventBehavior MouseViewModel="{Binding ElementName=view, Path=MouseViewModel}"></behaviors:MouseEventBehavior>
             </i:Interaction.Behaviors>
         </skia:SKGLElement>
     </Grid>
